less/events.less
/* @CHARSET "UTF-8"; */
/*!
 * Copyright (c) 2019 Eclipse Foundation, Inc.
 * 
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 * 
 * Contributors:
 *   Christopher Guindon <chris.guindon@eclipse-foundation.org>
 * 
 * SPDX-License-Identifier: EPL-2.0
*/

@white-color:  #FFFFFF;
@main-theme-color: #3E7B96;

/* Define the function to map the event type with the background images starts */
@image-urls: 
    "images/EclipseCon.jpg",
    "images/otherInteresting.png",
    "images/Stammtisch.jpg",
    "images/trainingSeries.jpg",
    "images/virtual.png",
    "images/WorkingGroupEvents.png",
    "images/unknown.jpg";

@event-type-class-names: ec, ee, dc, et, ve, wg, unknown;

@length: length(@event-type-class-names);

.generate-backgroundImages(@image-urls; @event-type-class-names; @index) when (@index > 0) {
    .generate-backgroundImages(@image-urls; @event-type-class-names; (@index - 1)); // decrement.
 
  @event-type-class-name: extract(@event-type-class-names, @index);
  @image-url: extract(@image-urls, @index);
 
  .type-@{event-type-class-name} {
    background-image: url("@{image-url}");
  }
}
/* Define the function to map the event type with the background images ends */

/* Reusable classes */
.margin-bottom-10 {
    margin-bottom: 10px;
}

.margin-top-15 {
    margin-top: 15px;
}

.all-margin-auto {
    margin: auto;
}

.margin-right-20 {
    margin-right: 20px;
}

/* Events styles */

.eventListWrapper {
    display: flex;
    flex-wrap: wrap;
}

.generate-backgroundImages(@image-urls; @event-type-class-names; @length);

.eventCard {
    min-height: 280px;
    text-align: center;
    align-items: center;
    justify-content: center;
    margin-top: 20px;
    padding: 20px;
    color: @white-color;
    display: flex;
    flex-direction: column;
}

.decorationDash {
    height: 4px;
    width: 60px;
    background-color: @white-color;
    margin: auto;
}

.eventTitle {
    text-overflow: ellipsis;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    display: -webkit-box;
    overflow-y: hidden;
    line-height: 1.5;
    color: @white-color;
}

.borderedEvent {
    border: 1px solid #ededed;
}

.eventDetails {
    padding: 20px;
    background-color: @white-color;
    height: auto;
}

.selectionTitle {
    background: @main-theme-color;
    min-height: 30px;
    width: 100%;
    text-align: left;
    line-height: 30px;
    height: 47px;
    color: @white-color;
    border: none;
    padding-right: 2vh;
    padding-left: 2vh;
}

.checkboxList {
    background-color: @white-color;
    list-style-type: none;
    padding: 2vh 0 2vh 1vh;
}

#checkboxMargin {
    margin: 1vh;
}

.expandableIcon {
    float: right;
    line-height: inherit;
}

.eventCardButton {
    background: none;
    border: 1px solid @white-color;
    &:hover {
        color: @white-color;
        background: none;
        border: 1px solid @white-color;
    }
    &:active {
        background: none;
        border: 1px solid @white-color;
    }
}

.calendarIcon {
    color: @main-theme-color;
    margin-right: 5px;
    margin-left: 10px;
}

.calendarIcon-ve {
    color: @white-color !important;
}

.displayForIE {
    display: table-cell;
}

/** CustomSearch Style start **/
/* enable absolute positioning */
.inner-addon { 
    position: relative; 
}

/* style icon */
.inner-addon .fa-search {
  position: absolute;
  padding: 10px;
  pointer-events: none;
}

/* align icon */
.left-addon .fa-search { 
    left:  0px;
}
.right-addon .fa-search { 
    right: 0px;
}

/* add padding  */
.left-addon input  { 
    padding-left:  30px;
}
.right-addon input { 
    padding-right: 30px; 
}

/** CustomSearch Style ends **/

